Resolve a tags wrap line

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -56,11 +56,12 @@ body {
 
 a {
   text-decoration: none;
+}
 
-  &[href^="http"] {
-    display: block;
-    word-wrap: break-word;
-  }
+/* 除了锚点 a 都要换行 */
+main :not(:where(h2, h3, h4, h5, h6)) a[href^="http"] {
+  word-wrap: break-word;
+  width: 100%;
 }
 
 article a {
